--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^11.2.10",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.23.1",
     "shadcn-ui": "^0.8.0",
     "sort-by": "^1.2.0"
