--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.23.1",
     "shadcn-ui": "^0.8.0",
     "sort-by": "^1.2.0",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
