--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.23.1",
+    "react-type-animation": "^3.2.0",
     "shadcn-ui": "^0.8.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4",
